logs/dag_id=create_tables/run_id=scheduled__2024-06-04T000000+0000/task_id=task_create_tb_weather/attempt=2.log
[2024-06-04T15:17:02.175+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-04T15:17:02.315+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: create_tables.task_create_tb_weather scheduled__2024-06-04T00:00:00+00:00 [queued]>
[2024-06-04T15:17:02.344+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: create_tables.task_create_tb_weather scheduled__2024-06-04T00:00:00+00:00 [queued]>
[2024-06-04T15:17:02.346+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-06-04T15:17:02.387+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): task_create_tb_weather> on 2024-06-04 00:00:00+00:00
[2024-06-04T15:17:02.416+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=444) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-04T15:17:02.421+0000] {standard_task_runner.py:63} INFO - Started process 446 to run task
[2024-06-04T15:17:02.422+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'create_tables', 'task_create_tb_weather', 'scheduled__2024-06-04T00:00:00+00:00', '--job-id', '51', '--raw', '--subdir', 'DAGS_FOLDER/create_tables.py', '--cfg-path', '/tmp/tmpscpmdhz1']
[2024-06-04T15:17:02.433+0000] {standard_task_runner.py:91} INFO - Job 51: Subtask task_create_tb_weather
[2024-06-04T15:17:02.571+0000] {task_command.py:426} INFO - Running <TaskInstance: create_tables.task_create_tb_weather scheduled__2024-06-04T00:00:00+00:00 [running]> on host 6b740a15ab9e
[2024-06-04T15:17:02.759+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Matheus' AIRFLOW_CTX_DAG_ID='create_tables' AIRFLOW_CTX_TASK_ID='task_create_tb_weather' AIRFLOW_CTX_EXECUTION_DATE='2024-06-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-06-04T00:00:00+00:00'
[2024-06-04T15:17:02.765+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-04T15:17:02.767+0000] {sql.py:276} INFO - Executing: 
CREATE TABLE IF NOT EXISTS tb_weather 
(Description VARCHAR(250) NOT NULL,
 Temperature double precision NOT NULL,
 Humidity integer NOT NULL,
 Wind Speed double precision NOT NULL,
 Time timestamp without time zone NOT NULL,
 Clouds integer NOT NULL,
 Location VARCHAR(250) NOT NULL
 );
 
[2024-06-04T15:17:02.785+0000] {base.py:84} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-06-04T15:17:02.809+0000] {base.py:84} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-06-04T15:17:02.982+0000] {sql.py:470} INFO - Running statement: 
CREATE TABLE IF NOT EXISTS tb_weather 
(Description VARCHAR(250) NOT NULL,
 Temperature double precision NOT NULL,
 Humidity integer NOT NULL,
 Wind Speed double precision NOT NULL,
 Time timestamp without time zone NOT NULL,
 Clouds integer NOT NULL,
 Location VARCHAR(250) NOT NULL
 );
 , parameters: None
[2024-06-04T15:17:03.004+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-04T15:17:03.005+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "double"
LINE 6:  Wind Speed double precision NOT NULL,
                    ^

[2024-06-04T15:17:03.036+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=create_tables, task_id=task_create_tb_weather, run_id=scheduled__2024-06-04T00:00:00+00:00, execution_date=20240604T000000, start_date=20240604T151702, end_date=20240604T151703
[2024-06-04T15:17:03.067+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 51 for task task_create_tb_weather (syntax error at or near "double"
LINE 6:  Wind Speed double precision NOT NULL,
                    ^
; 446)
[2024-06-04T15:17:03.121+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-04T15:17:03.164+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-04T15:17:03.168+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
